2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in (ATtiny261, ATtiny461, ATtiny861): new
	entries.

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: Remove the device support decision based on
	the old AVR910 device codes; we've got signature verification
	now so better rely on that.
	* avr910.c: Revert the signature bytes returned, as it already
	happened in butterfly.c.  This closes bug #14998: Signature Bytes
	read in wrong order (avr910 mode)

2006-09-01 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Wim Lewis.
	* serbb_posix.c: Improve error handling.
	patch #4923: Better error reporting for serial-bitbang programmers

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Introduce a "stk500v1" entry, so we
	can switch the default "stk500" to "stk500v2" some day.

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	The major part of this change has been contributed by
	<andyw@pobox.com>.
	Implements patch #4635: Add support for terminal/console
	servers for serial programmers
	* ser_posix.c: Add net_open(), and divert to it for net:host:port.
	* ser_win32.c: Recognize net:host:port, and bail out.
	* avrdude.1: Document the net:host:port connection option.
	* doc/avrdude.texi: (Ditto.)

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	Fix for bug #16627: Butterfly programmer does not reset after
	programming
	* butterfly.c: Wait for the device's response after sending
	an "E" command.

2006-08-31 Joerg Wunsch <j@uriah.heep.sax.de>

	Tentative fix for bug #16156: Problem with Si-Prog
	* serbb_posix.c: Disable reset before closing.
	* serbb_win32.c: (Ditto.)

2006-08-30 Joerg Wunsch <j@uriah.heep.sax.de>

	Rewrite the serbb code so the pin numbering matches the
	DB9 connector, and fix some related bugs in serbb_posix.c.
	Closes bug #16265: dasa2 does not work under posix
	* avrdude.conf.in: New serbb pin numbering; added "siprog"
	as an alias for "ponyser".
	* serbb_posix.c: New pin numbering, fix some confusion.